--- a/package.json
+++ b/package.json
@@ -3,26 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.14.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "typescript": "^4.1.2",
+    "underscore": "^1.13.1",
+    "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^17.0.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/redux": "^3.6.0",
+    "@types/react": "^15.6.1",
+    "@types/react-router-dom": "^4.1.1",
     "@types/redux-thunk": "^2.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "@types/underscore": "^1.11.3",
+    "@types/react-redux": "^7.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
